<resources>
    <string name="app_name">App_UT2_06</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reserva">Reserva tus entradas</string>
    <string name="zoologico">zoológico</string>
    <string name="reptario">Reptario</string>
    <string name="visita_guiada">Visita guiada</string>
    <string name="adultos">Adultos</string>
    <string name="niños">Niños</string>
    <string name="precio_total">Total: %s</string>
    <string name="siguiente">Siguiente</string>
    <string name="tipo_entrada">Tipo de entrada</string>
    <string name="fecha">Fecha seleccionada</string>
    <string name="personas">Número de personas</string>
    <string name="reservar">Reservar</string>
    <string name="inicio">Inicio</string>
    <string name="fechaF">Fecha</string>
    <string name="resumen">Resumen</string>
</resources>