<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FragmentInicio">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:importantForAccessibility="no"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/zoo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/reserva"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textColor="@color/material_on_background_emphasis_medium" />
            <Button
                android:id="@+id/botonZoologico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:minWidth="250dp"
                android:text="@string/zoologico" />
            <Button
                android:id="@+id/botonReptario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:minWidth="250dp"
                android:text="@string/reptario" />
            <Button
                android:id="@+id/botonVisitaGuiada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:minWidth="250dp"
                android:text="@string/visita_guiada" />
        </LinearLayout>
    </ScrollView>
</layout>